Added download for javafx mods and local sdk removed duplicate if in release and updates arch